<resources>
    <string name="app_name">丰收互联</string>
    <string name="title_activity_starting">starting</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="title_activity_home">Home</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="sign_in_with_third_party">Sign in with third-part account</string>
    <string name="welcome_2_HOB">Welcome to Harvest!</string>
    <string name="account_balance">My Account</string>
    <string name="manage_asset">Manage Asset</string>
    <string name="flex_saver">Flex Savings</string>
    <string name="invest_fund">Invest Funding</string>
    <string name="loan_mortgage">Loan &amp; Mortgage</string>
    <string name="online_statement">Online Statement</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="monthly_spend">Monthly Spend</string>
    <string name="dollar_500">$ 500.00</string>
    <string name="dollar_minus_320">$ -320.00</string>
    <string name="view_more"><u>View more</u></string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menuUsername">工具人</string>
    <string name="sign_out">Sign out</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
